--- a/index.html
+++ b/index.html
@@ -9,33 +9,33 @@
 <body>
 
 <div class="main-container">
-  <div class="input-display">
-    0
-  </div>
-  <div class="buttons-container">
+  <input id="input-display" class="input-display">
+    
+  </input>
+  <div id="button-container"class="buttons-container">
     <div class="button-row">
-      <button class="button-class ">7</button>
-      <button class="button-class ">8</button>
-      <button class="button-class ">9</button>
-      <button class="button-class ">÷</button>
+      <button value="7" class="button-class ">7</button>
+      <button value="8" class="button-class ">8</button>
+      <button value="9" class="button-class ">9</button>
+      <button value="/" class="button-class ">÷</button>
     </div>
     <div class="button-row">
-      <button class="button-class ">4</button>
-      <button class="button-class " >5</button>
-      <button class="button-class ">6</button>
-      <button class="button-class ">×</button>
+      <button value="4" class="button-class ">4</button>
+      <button value="5" class="button-class " >5</button>
+      <button value="6" class="button-class ">6</button>
+      <button value="*" class="button-class ">×</button>
     </div>
     <div class="button-row">
-      <button class="button-class ">1</button>
-      <button class="button-class ">2</button>
-      <button class="button-class ">3</button>
-      <button class="button-class ">−</button>
+      <button value="1" class="button-class ">1</button>
+      <button value="2" class="button-class ">2</button>
+      <button value="3" class="button-class ">3</button>
+      <button value="-" class="button-class ">−</button>
     </div>
     <div class="button-row">
-      <button class="button-class ">0</button>
-      <button class="button-class ">.</button>
-      <button class="button-class ">=</button>
-      <button class="button-class ">+</button>
+      <button value="0" class="button-class ">0</button>
+      <button value="." class="button-class ">.</button>
+      <button value="=" class="button-class ">=</button>
+      <button value="+" class="button-class ">+</button>
     </div>
   </div>
 </div>
